# vulnerabilities

./: LICENSE  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yml  codeql-analysis.yml  scan_bandit.yml  scan_semgrep.yml
integration_tests/: test_semgrep.py
tests/: test_bandit_parser.py  test_cyclonedx_parser.py  test_sarif.py  test_semgrep_parser.py  test_snyk_parser.py  utils.py
tests/payload/: payload.py
tests/scans/bandit/: empty.json  latest.json  report1.json
tests/scans/cyclonedx/: grype.9_0.xml  grype.latest.xml  report_date.xml  report_error1.xml  report_severity_none.xml
tests/scans/sarif/: appendix_empty_invoc.sarif  appendix_untracked.sarif  semgrep.sarif
tests/scans/semgrep/: error.json  latest.json  report2.json  report_error1.json  report_remediation1.json  report_remediation2.json
tests/scans/snyk/: KULwF8Hx.json  all_projects_dd.json  empty.json  latest.json  report_ko1.json
vulnerabilities/: __init__.py  sarif.py  vulnerabilities.py
vulnerabilities/tools/bandit/: parser.py
vulnerabilities/tools/cyclonedx/: parser.py
vulnerabilities/tools/semgrep/: parser.py
vulnerabilities/tools/snyk/: parser.py
