

[dependencies]
python-dateutil = "^7.0"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "vulnerabilities"
author = "Damien Carol"
author-email = "damien.carol@gmail.com"
home-page = "https://github.com/damiencarol/vulnerabilities"
description-file = "README.rst"
license = "BSD-3-Clause"
requires = ["python-dateutil"]
